@@ -1,24 +1,0 @@
-//
-// C++ Implementation: movableGraphicsScene
-//
-// Description: 
-//
-//
-// Author: Joachim Schiele <js@lastlog.de>, (C) 2007
-//
-// Copyright: See COPYING file that comes with this distribution
-//
-//
-#include "movableGraphicsScene.h"
-
-movableGraphicsScene::movableGraphicsScene()
- : QGraphicsScene()
-{
-}
-
-
-movableGraphicsScene::~movableGraphicsScene()
-{
-}
-
-
