@@ -1,29 +1,0 @@
-//
-// C++ Interface: movableGraphicsScene
-//
-// Description: 
-//
-//
-// Author: Joachim Schiele <js@lastlog.de>, (C) 2007
-//
-// Copyright: See COPYING file that comes with this distribution
-//
-//
-#ifndef MOVABLEGRAPHICSSCENE_H
-#define MOVABLEGRAPHICSSCENE_H
-
-#include <QGraphicsScene>
-
-/**
-	@author Joachim Schiele <js@lastlog.de>
-*/
-class movableGraphicsScene : public QGraphicsScene
-{
-public:
-    movableGraphicsScene();
-
-    ~movableGraphicsScene();
-
-};
-
-#endif
